--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 nalgebra = "0.30.1"
-flate2 = "1.0.22"
+async-compression = { version = "0.3.15", features = ["tokio", "zlib"] }
 rgb = "0.8.33"
+tokio = { version = "1.23.0", features = ["full"] }
+async-trait = "0.1.60"
