--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,3 +10,5 @@ protocol = { path = "../protocol" }
 parking_lot = "0.12.1"
 boolinator = "2.4.0"
 colour = "0.6.0"
+tokio = { version = "1.23.0", features = ["full"] }
+async-trait = "0.1.60"
