broadcast concurrently instead of sequentially

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,3 +12,4 @@ boolinator = "2.4.0"
 colour = "0.6.0"
 tokio = { version = "1.23.0", features = ["full"] }
 async-trait = "0.1.60"
+futures = "0.3.25"
