--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -11,3 +11,5 @@ async-compression = { version = "0.3.15", features = ["tokio", "zlib"] }
 rgb = "0.8.33"
 tokio = { version = "1.23.0", features = ["full"] }
 async-trait = "0.1.60"
+strum_macros = "0.24.3"
+strum = "0.24.1"
