--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,3 +13,5 @@ colour = "0.6.0"
 tokio = { version = "1.23.0", features = ["full"] }
 async-trait = "0.1.60"
 futures = "0.3.25"
+strum = "0.24.1"
+strum_macros = "0.24.3"
