--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -12,3 +12,4 @@ rgb = "0.8.33"
 tokio = { version = "1.23.0", features = ["full"] }
 strum_macros = "0.24.3"
 strum = "0.24.1"
+boolinator = "2.4.0"
