--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,3 +14,4 @@ tokio = { version = "1.23.0", features = ["full"] }
 futures = "0.3.25"
 strum = "0.24.1"
 strum_macros = "0.24.3"
+serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
