generalize `FlagSet` to allow any primitive integer via `num-traits`

--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "1.23.0", features = ["full"] }
 strum_macros = "0.24.3"
 strum = "0.24.1"
 boolinator = "2.4.0"
+num-traits = "0.2.15"
