--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,3 +15,4 @@ futures = "0.3.25"
 strum = "0.24.1"
 strum_macros = "0.24.3"
 serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
+tap = "1.0.1"
