--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,7 +14,7 @@ tokio = { version = "1.23.0", features = ["full"] }
 futures = "0.3.25"
 strum = "0.24.1"
 strum_macros = "0.24.3"
-twilight-http = "0.15.1"
-twilight-model = "0.15.1"
-twilight-gateway = "0.15.1"
+twilight-http = "0.15.2"
+twilight-model = "0.15.2"
+twilight-gateway = { version = "0.15.2", default-features = false, features = ["rustls-webpki-roots"] } #todo: workaround for corrupt certificate cache
 tap = "1.0.1"
