--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,3 +18,6 @@ twilight-http = "0.15.2"
 twilight-model = "0.15.2"
 twilight-gateway = { version = "0.15.2", default-features = false, features = ["rustls-webpki-roots"] } #todo: workaround for corrupt certificate cache
 tap = "1.0.1"
+
+[lints]
+workspace = true
