--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 name = "server"
 version = "0.1.0"
+description = "yet another CubeWorld alpha server"
+repository = "https://github.com/LastExceed/berld"
+readme = "README.md"
+# license = "TODO"
+keywords = ["cubeworld"]
+categories = ["games"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
