--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ resolver = "2"
 # non_exhaustive_omitted_patterns = "warn"
 
 absolute_paths_not_starting_with_crate = "warn"
-box_pointers = "warn"
+# box_pointers = "warn" # useless
 elided_lifetimes_in_paths = "warn"
 explicit_outlives_requirements = "warn"
 ffi_unwind_calls = "warn"
