--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nalgebra = "0.32.3"
+nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
 async-compression = { version = "0.4.5", features = ["tokio", "zlib"] }
 rgb = "0.8.37"
 tokio = { version = "1.34.0", features = ["full"] }
