--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,6 +22,7 @@ twilight-http = "0.15.4"
 twilight-model = "0.15.4"
 twilight-gateway = { version = "0.15.4", default-features = false, features = ["rustls-webpki-roots"] } #todo: workaround for corrupt certificate cache
 tap = "1.0.1"
+config = "0.13.4"
 
 [lints]
 workspace = true
