--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -24,6 +24,7 @@ twilight-gateway = { version = "0.15.4", default-features = false, features = ["
 tap = "1.0.1"
 config = "0.13.4"
 dot_vox = "5.1.1"
+rand = "0.8.5"
 
 [lints]
 workspace = true
