--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -25,6 +25,8 @@ tap = "1.0.1"
 config = "0.13.4"
 dot_vox = "5.1.1"
 rand = "0.8.5"
+axum = "0.7.4"
+serde = { version = "1.0", features = ["derive"] }
 
 [lints]
 workspace = true
