add configuration to listforge api

--- a/config.json5
+++ b/config.json5
@@ -1,10 +1,10 @@
 {
-  seed: 26879,
-  discord_bot_token: '',
-  discord_public_channel_id: 0,
-  discord_admin_channel_id: 0,
+  discord_invite: "",
   admin_password: 'change-me',
   warps: {
-    spawn: [550301073408, 550301073408,0]
-  }
+    spawn: [550301073408, 550301073408, 0]
+  },
+  slots: -1,
+  name: "unnamed berld server",
+  listforgeapi_port: 8080
 }
