--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,9 @@ suspicious  = { level = "warn", priority = -1 }
 multiple_crate_versions = "allow" # unpreventable
 cargo_common_metadata = "allow" # TODO (license)
 
+# complexity exceptions
+too_many_arguments = "allow" # disagree
+
 # pedantic exceptions
 enum_glob_use = "allow" # unsure
 wildcard_imports = "allow" # unsure
@@ -138,7 +141,6 @@ partial_pub_fields = "allow" # unsure
 modulo_arithmetic = "allow" # unsure
 indexing_slicing = "allow" # unsure
 as_conversions = "allow" # unsure
-
 
 # suspicious exceptions
 blanket_clippy_restriction_lints = "allow" # disagree
