--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,12 +15,12 @@ edition = "2024"
 protocol = { path = "../protocol" }
 boolinator = "2.4.0"
 colour = "2.1.0"
-tokio = { version = "1.45.1", features = ["full"] }
+tokio = { version = "1.46.0", features = ["full"] }
 futures = "0.3.31"
 strum = "0.27.1"
-twilight-http = "0.15.4"
-twilight-model = "0.15.4"
-twilight-gateway = { version = "0.15.4", default-features = false, features = ["rustls-webpki-roots"] } #todo: workaround for corrupt certificate cache
+twilight-http = "0.16.0"
+twilight-model = "0.16.0"
+twilight-gateway = { version = "0.16.0" } #todo: workaround for corrupt certificate cache
 tap = "1.0.1"
 config = "0.15.11"
 dot_vox = "5.1.1"
